database connect, typescript migration

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Walking route recommendation backend service",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node dist/src/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
     "test": "jest"
   },
   "keywords": [
@@ -27,10 +28,21 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.11.3",
+    "postgres": "^3.4.8",
     "supabase": "^2.72.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.6",
+    "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^25.0.10",
+    "@types/pg": "^8.16.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
