--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@supabase/supabase-js": "^2.91.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -42,6 +44,7 @@
     "@types/pg": "^8.16.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "prisma": "^7.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
