--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/pg": "^8.16.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "prettier": "^3.8.1",
     "prisma": "^7.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
