--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         ],
         "outDir": "./dist",
         "rootDir": "./",
-        "strict": false,
+        "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
