--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/src/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky"
   },
   "keywords": [
     "walking",
@@ -42,6 +43,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.10",
     "@types/pg": "^8.16.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.8.1",
