WAL-43 add: uuid 라이브러리 추가
uuid 유효성 검사 및 기타 uuid 관련 작업에 필요한 라이브러리 설치

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.11.3",
     "postgres": "^3.4.8",
-    "supabase": "^2.72.8"
+    "supabase": "^2.72.8",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.3.1",
