--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Walking route recommendation backend service",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "test": "jest",
