--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
         "lib": [
             "es2020"
         ],
-        "outDir": "./dist",
-        "rootDir": "./",
+        "outDir": "dist",
+        "rootDir": "src",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
